fixed ui
fixed profilepic not showing in search results, styled search results and profile edit/view modes

--- a/src/functions/profile.css
+++ b/src/functions/profile.css
@@ -2,6 +2,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 60%;
+}
+
+#img-btn {
+  margin-top: 20px;
+  margin-bottom: 5px;
 }
 
 .profile-input {
@@ -14,11 +20,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 #profile-picture {
-  width: 120px;
   height: 120px;
+  width: 120px;
   border-radius: 70px;
 }
 
@@ -42,8 +49,43 @@
 }
 
 #profile-name {
-  color: rgb(0, 42, 92);
+  color: black;
   font-size: 2em;
+}
+
+#profile-bio-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+#profile-bio {
+  margin-bottom: 20px;
+}
+
+#profile-tags {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+
+.profile-tag {
+  margin-right: 5px;
+  margin-top: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+
+  background-color: #f1f8ff;
+  color: #0366d6;
+  border: none;
+  border-radius: 30px;
+  font-size: small;
+  font-weight: bold;
 }
 
 #profile-box {
