--- a/src/search/profile-generic.css
+++ b/src/search/profile-generic.css
@@ -1,3 +1,8 @@
+#edit-btn {
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+
 #profilegeneric-wrapper {
   display: flex;
   flex-direction: column;
@@ -9,6 +14,11 @@
   height: 120px;
   width: 120px;
   border-radius: 70px;
+}
+
+#profilegeneric-username {
+  color: black;
+  font-size: 2em;
 }
 
 #profilegeneric-buttons {
@@ -40,6 +50,13 @@
   cursor: pointer;
 }
 
+#profilegeneric-bio-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 #profilegeneric-bio {
   margin-bottom: 20px;
 }
@@ -48,6 +65,8 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
 }
 
 .profilegeneric-tag {
